force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Used for family retreat - record of properties available for families to book from.  See documentation on Retreat booking under clouding around files for full details.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>