force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Complete address shown on the portal</description>
    <inlineHelpText>Complete address shown on the portal</inlineHelpText>
    <label>Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>