force-app/main/default/objects/Property__c/fields/Address_Private__c.field-meta.xml
<CustomField>
    <fullName>Address_Private__c</fullName>
    <description>Complete address of property (used when address is not visible on portal)</description>
    <inlineHelpText>Complete address of property (used when address is not visible on portal)</inlineHelpText>
    <label>Address (Private)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>