force-app/main/default/objects/Property__c/fields/Available_for_booking_portal__c.field-meta.xml
<CustomField>
    <fullName>Available_for_booking_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows property on the booking portal</description>
    <inlineHelpText>Shows property on the booking portal</inlineHelpText>
    <label>Available for booking portal</label>
    <type>Checkbox</type>
</CustomField>