force-app/main/default/objects/Property__c/fields/Can_extend_to_full_week_an_own_expense__c.field-meta.xml
<CustomField>
    <fullName>Can_extend_to_full_week_an_own_expense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to extend to the full week at the
family’s own expense</description>
    <inlineHelpText>Option to extend to the full week at the
family’s own expense</inlineHelpText>
    <label>Can extend to full week an own expense</label>
    <type>Checkbox</type>
</CustomField>