force-app/main/default/objects/Property__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <description>Number of guests e.g. ( 7 = Sleeps 7 people)</description>
    <inlineHelpText>Number of guests e.g. ( 7 = Sleeps 7 people)</inlineHelpText>
    <label>Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>