force-app/main/default/objects/Property__c/fields/Length_of_stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_stay__c</fullName>
    <label>Length of stay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 days (7 nights)</fullName>
            </value>
            <value>
                <fullName>7 days (6 nights)</fullName>
            </value>
            <value>
                <fullName>6 days (5 nights)</fullName>
            </value>
            <value>
                <fullName>5 days (4 nights)</fullName>
            </value>
            <value>
                <fullName>4 days (3 nights)</fullName>
            </value>
            <value>
                <fullName>3 days (2 nights)</fullName>
            </value>
            <value>
                <fullName>2 days (1 night)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>