force-app/main/default/objects/Property__c/fields/Not_available_on_weekend__c.field-meta.xml
<CustomField>
    <fullName>Not_available_on_weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not available on weekend</label>
    <type>Checkbox</type>
</CustomField>