force-app/main/default/objects/Property__c/fields/Peak_period_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Peak_period_restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrictions for peak/off peak times</description>
    <inlineHelpText>Restrictions for peak/off peak times</inlineHelpText>
    <label>Peak period restrictions</label>
    <type>Checkbox</type>
</CustomField>