force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Length_of_stay__c</columns>
    <columns>Guests__c</columns>
    <columns>Peak_period_restrictions__c</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Available_for_booking_portal__c</columns>
    <columns>Can_extend_to_full_week_an_own_expense__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>