force-app/main/default/objects/Property__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Peak_period_restrictions__c</columns>
    <columns>Not_available_on_weekend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>